--- a/src/auth/auth.css
+++ b/src/auth/auth.css
@@ -1,44 +1,56 @@
 
    .pageWrapper {
     display: flex;
-    align-items: center;
     justify-content: center;
-    height: 100vh; 
+    align-items: center;
+    height: 100vh;
   }
   
   .signupWrapper {
-    width: 35vw;
-    padding: 2rem;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1), 0 6px 20px rgba(0, 0, 0, 0.1);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    padding: 20px;
+    max-width: 400px;
+    width: 100%;
   }
   
   .signupForm {
     display: flex;
     flex-direction: column;
-    width: 100%;
   }
   
   .optionsContainer {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 100%;
-    margin-bottom: 1rem;
   }
   
-  .checkbox {
-    margin: 0;
+  .linkStyle {
+    text-decoration: none;
+    color: #1976d2;
+    display: inline;
+    cursor: pointer;
   }
   
-  .forgotPassword {
-    margin: 0;
+  .linkStyle:hover {
+    text-decoration: underline;
   }
   
   .signinLink {
-    margin-top: 1rem;
     text-align: center;
   }
+  
+  .typographyStyle {
+    color: #4C4E64DE;
+    font-size: 16px;
+  }
+  
+  .customFontColor {
+    color: #4C4E64DE;
+  }
+  
+  .customButton {
+    width: 100%;
+    margin-bottom: 16px;
+  }
+  
+  
   
